# ortin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: busarm7.hpp  busarm9.hpp  busshared.hpp  nds.hpp  ortin.hpp  ppu.hpp
include/emulator/: busshared.hpp  dma.hpp  gamecard.hpp  ipc.hpp  nds.hpp  ppu.hpp  timer.hpp
include/emulator/cartridge/: gamecard.hpp  key1.hpp
include/emulator/nds7/: apu.hpp  busarm7.hpp  rtc.hpp  spi.hpp  wifi.hpp
include/emulator/nds9/: busarm9.hpp  dsmath.hpp
include/menus/: debug.hpp  dev.hpp  emulation.hpp  file.hpp  graphics.hpp
src/: busarm7.cpp  busarm9.cpp  busshared.cpp  main.cpp  nds.cpp  ortin.cpp  ppu.cpp
src/emulator/: busshared.cpp  dma.cpp  gamecard.cpp  ipc.cpp  nds.cpp  ppu.cpp  timer.cpp
src/emulator/cartridge/: gamecard.cpp  key1.cpp
src/emulator/nds7/: apu.cpp  busarm7.cpp  rtc.cpp  spi.cpp  wifi.cpp
src/emulator/nds9/: busarm9.cpp  dsmath.cpp
src/menus/: debug.cpp  dev.cpp  emulation.cpp  file.cpp  graphics.cpp
